--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,10 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+
+appsettings.json
+appsettings.Development.json
+appsettings.Staging.json
+appsettings.Production.json
+
